# LabelForImage

./: README.md  builddata.py  conver_binary.py  read.py  save.py  show.py  showImage.py
Annotations/: img1.xml  img2.xml  img3.xml  roi_452.xml  roi_536.xml  roi_544.xml
DocumentScan/: main.cpp  scan.cpp  scan.h
ImageSets/Main/: trainval.txt
documentScan/: documentScan.pro  scan.cpp
finerKeyPoint/: CMakeLists.txt  finger.cpp  libkeypoint.cpp  libkeypoint.h  main.cpp
